# STDF-Digital-Twin-Skills

./: .gitignore  CATALOG_DATA_GAPS_REPORT.md  CHAT_JSON_STRUCTURE.md  CLAUDE.md  CODE_EXECUTION_ENHANCEMENTS.md  DATA_GAPS_REPORT_FOR_TEAM.md  ENERGY_SKILL_VALIDATION_REPORT.md  IMPLEMENTATION_PROGRESS.md  Procfile  README.md  SKILLS_ARCHITECTURE_PLAN.md  SYSTEM_PROMPT.txt  XML_ARTIFACTS_IMPLEMENTATION.md  app.py  app_messages_api.py  china_forecast_output.txt  clean_passenger_cars.py  curves_catalog_v2.json  database.py  install.sh  instructions_editable.md  passenger_vehicles_taxonomy_and_datasets.json  passenger_vehicles_taxonomy_and_datasets_v2.json  pyproject.toml  requirements-web.txt  sessions.db  skill-manager.config.example.json  system_prompt.txt
.claude/skills/: filter_skill_data.py
TEST_RESULTS/: TEST_RESULTS_COPPER_DEMAND.md  TEST_RESULTS_DATACENTER_UPS.md  TEST_RESULTS_DATACENTER_UPS_FIXES_VERIFIED.md  TEST_RESULTS_LEAD_DEMAND.md
archive-skills/swb-transition/: requirements.txt
archive-skills/three-wheeler-demand/: run_forecast.sh
client/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
curves_catalog_files/: Agentic_AI.json  Aluminium.json  Artificial_Intelligence.json  Compute_Chipsets.json  Copper.json  Crude_Oil.json  Datacenter_UPS.json  Energy_Generation.json  Forklift.json  Polysilicon.json  README.md  Telecom_UPS.json  Three_Wheeler.json  Two_Wheeler.json  _index.json
output/: China_2030.json  China_2040.json  USA_2030.json  USA_2040.json
server/: .env.example  app_messages_api.py  database.py  requirements.txt
skill-instructions/: Demand Forecasting Instructions.xlsx
skill-test-queries/: README.md  copper-demand-test-queries.md  datacenter-ups-test-queries.md  lead-demand-test-queries.md  swb-transition-test-queries.md
skill-test-reports/: swb-transition-fix-plan.md  swb-transition-implementation-progress.md  swb-transition-phase1-complete.md  swb-transition-phase2-complete.md  swb-transition-phase3-complete.md  swb-transition-test-report.md
skill_manager/: __init__.py  api_client.py  cli.py  registry.py  sync.py  utils.py  validator.py
static/: chat.js  index.html  style.css
(+336 files in other folders)
